add enum color in the app with add catogory finsh

--- a/app/src/main/res/layout/home_pages.xml
+++ b/app/src/main/res/layout/home_pages.xml
@@ -115,6 +115,7 @@
         app:layout_constraintTop_toBottomOf="@id/header2">
 
         <ImageView
+            android:id="@+id/addcatagory_img"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
