--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/purple"
     android:orientation="vertical"
-    tools:context=".Edit1Activity">
+    tools:context=".EditNote">
 
     <LinearLayout
         android:layout_width="match_parent"
