--- a/app/src/main/res/drawable/ic_bluegreen.xml
+++ b/app/src/main/res/drawable/ic_bluegreen.xml
@@ -4,27 +4,15 @@
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
+
+
     <path
         android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="40.52"
-                android:endY="19.92"
-                android:startX="0.12"
-                android:startY="19.92"
-                android:type="linear">
-                <item
-                    android:color="#FF3023AE"
-                    android:offset="0" />
-                <item
-                    android:color="#FF53A0FD"
-                    android:offset="0.475" />
-                <item
-                    android:color="#FFB4EC51"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
+        android:strokeWidth="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#FFB4EC51"
+        android:name="path1">
+
     </path>
     <path
         android:fillColor="#00000000"
