--- a/app/src/main/res/drawable/ic_darkred2.xml
+++ b/app/src/main/res/drawable/ic_darkred2.xml
@@ -4,25 +4,15 @@
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
+
     <path
-        android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="20"
-                android:endY="40"
-                android:startX="20"
-                android:startY="-9.740159E-16"
-                android:type="linear">
-                <item
-                    android:color="#FFF5515F"
-                    android:offset="0" />
-                <item
-                    android:color="#FF434B5C"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+    android:strokeWidth="1"
+    android:strokeColor="#00000000"
+    android:fillColor="#FFB4EC51"
+    android:name="path1">
+
+</path>
     <path
         android:fillColor="#00000000"
         android:pathData="M20,20m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
