--- a/app/src/main/res/drawable/ic_links_notebook.xml
+++ b/app/src/main/res/drawable/ic_links_notebook.xml
@@ -4,22 +4,9 @@
     android:height="172dp"
     android:viewportWidth="120"
     android:viewportHeight="172">
-    <path android:pathData="M11,6h95a5,5 0,0 1,5 5v125a5,5 0,0 1,-5 5L11,141a2,2 0,0 1,-2 -2L9,8a2,2 0,0 1,2 -2z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="108.756"
-                android:endY="138.03"
-                android:startX="9.612"
-                android:startY="6.81"
-                android:type="linear">
-                <item
-                    android:color="#FF3D1054"
-                    android:offset="0" />
-                <item
-                    android:color="#FF7B1E58"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
+    <path android:name="path1"  android:fillColor="#7b1e58" android:pathData="M11,6h95a5,5 0,0 1,5 5v125a5,5 0,0 1,-5 5L11,141a2,2 0,0 1,-2 -2L9,8a2,2 0,0 1,2 -2z"
+       >
+
     </path>
     <path
         android:fillColor="#00000000"
