--- a/app/src/main/res/drawable/ic_picker2.xml
+++ b/app/src/main/res/drawable/ic_picker2.xml
@@ -5,6 +5,7 @@
     android:viewportHeight="76">
 
     <path
+        android:name="path1"
         android:fillColor="#7b1e58"
         android:pathData="M38,36m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
         android:strokeWidth="1"
@@ -15,6 +16,15 @@
         android:pathData="M38,36m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
         android:strokeWidth="1"
         android:strokeColor="#fff" />
+
+    <group
+        android:translateX="26"
+        android:translateY="25">
+        <path
+
+            android:fillColor="#ffffff"
+            android:pathData="M3,17.25V21h3.75L17.81,9.94l-3.75,-3.75L3,17.25zM20.71,7.04c0.39,-0.39 0.39,-1.02 0,-1.41l-2.34,-2.34c-0.39,-0.39 -1.02,-0.39 -1.41,0l-1.83,1.83 3.75,3.75 1.83,-1.83z" />
+    </group>
 
 
 </vector>
