--- a/app/src/main/res/drawable/ic_red.xml
+++ b/app/src/main/res/drawable/ic_red.xml
@@ -4,24 +4,15 @@
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
+
+
     <path
         android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="20"
-                android:endY="40"
-                android:startX="20"
-                android:startY="-9.740159E-16"
-                android:type="linear">
-                <item
-                    android:color="#FFF5515F"
-                    android:offset="0" />
-                <item
-                    android:color="#FF9F041B"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
+        android:strokeWidth="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#FF9F041B"
+        android:name="path1">
+
     </path>
     <path
         android:fillColor="#00000000"
