--- a/app/src/main/res/drawable/ic_redlight.xml
+++ b/app/src/main/res/drawable/ic_redlight.xml
@@ -6,26 +6,17 @@
     android:viewportHeight="40">
     <path
         android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="40.8"
-                android:endY="40.4"
-                android:startX="-6.4934393E-16"
-                android:startY="-9.740159E-16"
-                android:type="linear">
-                <item
-                    android:color="#FFAE2369"
-                    android:offset="0" />
-                <item
-                    android:color="#FFD7BF6D"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
+        android:strokeWidth="1"
+        android:strokeColor="#00000000"
+        android:fillColor="@color/red0"
+        android:name="path1">
+
     </path>
     <path
         android:fillColor="#00000000"
         android:pathData="M20,20m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
         android:strokeWidth="1"
         android:strokeColor="#fff" />
+
 </vector>
+
