--- a/app/src/main/res/drawable/pickershap.xml
+++ b/app/src/main/res/drawable/pickershap.xml
@@ -9,12 +9,14 @@
         android:fillColor="#00000000"
         android:pathData="M38,36m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
         android:strokeWidth="1"
-        android:strokeColor="#fff" />
+        android:strokeColor="#fff"
+        />
 
     <group
         android:translateX="26"
         android:translateY="25">
         <path
+            android:name="path1"
             android:fillColor="#FF000000"
             android:pathData="M3,17.25V21h3.75L17.81,9.94l-3.75,-3.75L3,17.25zM20.71,7.04c0.39,-0.39 0.39,-1.02 0,-1.41l-2.34,-2.34c-0.39,-0.39 -1.02,-0.39 -1.41,0l-1.83,1.83 3.75,3.75 1.83,-1.83z" />
     </group>
