--- a/app/src/main/res/layout/activity_confirmation_message.xml
+++ b/app/src/main/res/layout/activity_confirmation_message.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Confirmation_messageActivity">
+    tools:context=".ConfirmationMessage">
 
     <LinearLayout
         android:id="@+id/line"
