--- a/app/src/main/res/layout/create_note.xml
+++ b/app/src/main/res/layout/create_note.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,11 +12,11 @@
         android:layout_marginEnd="16dp"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="5sp"
+        android:text="cancel"
         android:textColor="#4a4a4a"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="cancel" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -38,39 +37,40 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_links_notebook"
-
             />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/change_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="48dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="64dp"
             android:scaleType="center"
             app:layout_constraintEnd_toEndOf="@+id/book"
             app:layout_constraintTop_toTopOf="@+id/book"
-            app:srcCompat="@drawable/pickershap" />
+            app:srcCompat="@drawable/ic_picker2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <EditText
-        android:id="@+id/textView"
+        android:id="@+id/category_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:letterSpacing="0.01"
         android:lineSpacingExtra="6sp"
+        android:hint="My diary "
+        android:textColorHint="#4a4a4a"
         android:textColor="#4a4a4a"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        android:text="My diary " />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
+        android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -79,7 +79,7 @@
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/category_title">
 
     </Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
