--- a/app/src/main/res/layout/notebooks_page.xml
+++ b/app/src/main/res/layout/notebooks_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
@@ -24,11 +23,11 @@
         android:layout_marginTop="16dp"
         android:letterSpacing="0.01"
         android:lineSpacingExtra="7sp"
+        android:text="Notebooks"
         android:textColor="#000000"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back"
-        android:text="Notebooks" />
+        app:layout_constraintTop_toBottomOf="@id/back" />
 
     <EditText
         android:id="@+id/search"
